# vcs

./: README.md
client/: README.md  create_changes.py  vcs.c
client/src/: client.py  create_changes.py  hash_utils.py  main.py  serverstub.py
server/: CMakeLists.txt  README.md
server/src/: Repository.cpp  Repository.h  main.cpp
vcs-server/: CMakeLists.txt
vcs-server/src/: main.cpp
